define cluster rpc service
