# gen/proto/swagger/vince/api/v1/api.swagger.json
@@ -96,64 +96,6 @@
         ]
       }
     },
-    "/v1/cluster": {
-      "get": {
-        "operationId": "Vince_GetCluster",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/v1GetClusterResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/googlerpcStatus"
-            }
-          }
-        },
-        "tags": [
-          "Vince"
-        ]
-      }
-    },
-    "/v1/cluster/apply": {
-      "post": {
-        "operationId": "Vince_ApplyCluster",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/v1ApplyClusterResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/googlerpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "config.name",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "config.nodes",
-            "description": "This is a request variable of the map type. The query format is \"map_name[key]=value\", e.g. If the map name is Age, the key type is string, and the value type is integer, the query parameter is expressed as Age[\"bob\"]=18",
-            "in": "query",
-            "required": false
-          }
-        ],
-        "tags": [
-          "Vince"
-        ]
-      }
-    },
     "/v1/version": {
       "get": {
         "operationId": "Vince_Version",
@@ -178,38 +120,6 @@
     }
   },
   "definitions": {
-    "ClientAuth": {
-      "type": "object",
-      "properties": {
-        "name": {
-          "type": "string"
-        },
-        "accessToken": {
-          "type": "string"
-        },
-        "rerfreshToken": {
-          "type": "string"
-        },
-        "serverId": {
-          "type": "string"
-        }
-      }
-    },
-    "ConfigNode": {
-      "type": "object",
-      "properties": {
-        "account": {
-          "$ref": "#/definitions/ClientAuth"
-        },
-        "bootstrap": {
-          "type": "boolean",
-          "description": "True if this node is used to bootstrap the cluster."
-        },
-        "address": {
-          "type": "string"
-        }
-      }
-    },
     "googlerpcStatus": {
       "type": "object",
       "properties": {
@@ -238,14 +148,6 @@
       },
       "additionalProperties": {}
     },
-    "v1ApplyClusterResponse": {
-      "type": "object",
-      "properties": {
-        "ok": {
-          "type": "string"
-        }
-      }
-    },
     "v1Build": {
       "type": "object",
       "properties": {
@@ -254,28 +156,6 @@
         },
         "serverId": {
           "type": "string"
-        }
-      }
-    },
-    "v1ClusterConfig": {
-      "type": "object",
-      "properties": {
-        "name": {
-          "type": "string"
-        },
-        "nodes": {
-          "type": "object",
-          "additionalProperties": {
-            "$ref": "#/definitions/ConfigNode"
-          }
-        }
-      }
-    },
-    "v1GetClusterResponse": {
-      "type": "object",
-      "properties": {
-        "config": {
-          "$ref": "#/definitions/v1ClusterConfig"
         }
       }
     }
